# moneyTransferService-backend/src/main/java/ru/netology/moneytransferservice/rest/ConfirmOperationController.java
@@ -1,15 +1,20 @@
 package ru.netology.moneytransferservice.rest;
 
+import lombok.RequiredArgsConstructor;
 import org.openapitools.api.ConfirmOperationApi;
-import org.openapitools.model.InlineObject1;
-import org.openapitools.model.InlineResponse200;
+import org.openapitools.model.ConfirmOperationReqDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import ru.netology.moneytransferservice.service.ConfirmOperationService;
 
 @Controller
+@RequiredArgsConstructor
 public class ConfirmOperationController implements ConfirmOperationApi {
+  private final ConfirmOperationService confirmOperationService;
+
   @Override
-  public ResponseEntity<InlineResponse200> confirmOperationPost(InlineObject1 inlineObject1) {
-    return ConfirmOperationApi.super.confirmOperationPost(inlineObject1);
+  public ResponseEntity<String> confirmOperationPost(
+      ConfirmOperationReqDto confirmOperationReqDto) {
+    return ConfirmOperationApi.super.confirmOperationPost(confirmOperationReqDto);
   }
 }
